@@ -1,3 +1,10 @@
+2009-09-28  Raphael 'kena' Poss  <r.c.poss@uva.nl>
+
+	Enhance the `mandel' demo.
+	
+	* demo/mandel.c: Refactor code to clarify steps. Change the color
+	scheme to make the output more printer-friendly.
+
 2009-09-25  Raphael 'kena' Poss  <r.c.poss@uva.nl>
 
 	Extend the `mandel' demo with use of the SEP protocol.
